VentaController con hateoas